objects/Contact.object
<CustomObject>
    <fields>
        <fullName>JobLevel__c</fullName>
        <description>indicates the job level of the contact</description>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>CEO/Managing Director</fullName>
                </value>
                <value>
                    <fullName>CFO/Finance Director</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>CISO</fullName>
                </value>
                <value>
                    <fullName>Corporate Communications Director</fullName>
                </value>
                <value>
                    <fullName>CTO</fullName>
                </value>
                <value>
                    <fullName>CXO/Executive</fullName>
                </value>
                <value>
                    <fullName>Director/Senior Manager</fullName>
                </value>
                <value>
                    <fullName>Facilities Manager</fullName>
                </value>
                <value>
                    <fullName>HR Director</fullName>
                </value>
                <value>
                    <fullName>Individual Contributor</fullName>
                </value>
                <value>
                    <fullName>IT Director</fullName>
                </value>
                <value>
                    <fullName>Management without staff</fullName>
                </value>
                <value>
                    <fullName>Management with staff</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Team Leader</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadType__c</fullName>
        <description>This field is mapped to Lead field: Lead Type. This field is used to Prevent PLOC generated Leads from being published to GCR</description>
        <label>LeadType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LikesDislikes__c</fullName>
        <description>Things that the contact or their company likes about Cisco.</description>
        <label>TO BE DELETED Likes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCP_Field_Marketing_Rating__c</fullName>
        <description>MCP Phase1: To display MCP lead score</description>
        <label>Eloqua Contact Rating</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCP_Nurturing_Activity_Detail__c</fullName>
        <description>MCP Phase1: To display link to show details about Nurturing Program</description>
        <formula>IF( Integrated_With_MCP__c , HYPERLINK("https://secure.eloqua.com/cvp.aspx?LP=CISS&amp;elqExtUserName=API.USER&amp;elqExtPwdHash=999645ce-a4ad-472d-9255-59602b503e98,A5319635C140F8878CDA6C1D72E45FC5FBA44A045A7CAE393BD1B09EC66A10C4088FD86C2B93E7E26E3BC89956383C9A13C4E4CEBCD63EC29BDB5E69FDC698CF&amp;URL=FlexReports/DisplayReport2.aspx?StandardReportID=1297%26EmailAddress="+Email+"%26ShowPrintOption=True", "Click Here" ,"_blank"),"Not Applicable")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eloqua Marketing Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCP_Program_Detail__c</fullName>
        <description>MCP Phase1: To Store List of Nurturing Program the Lead/Contact is Nurtured</description>
        <label>Eloqua Nurture Programs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCP_Services_Rating__c</fullName>
        <description>MCP Phase1: To display lead score</description>
        <label>Eloqua Contact Rating - Services</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCP_Status__c</fullName>
        <description>MCP Phase1: To Store the current status of Lead during MCP Nurturing Program</description>
        <label>Eloqua Nurture Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MODS_Contact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is for MSL Project to map contact with MODS</description>
        <label>MODS Contact ID</label>
        <referenceTo>MSL_MODS_Contact__c</referenceTo>
        <relationshipLabel>MODS Contact ID</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Malware_Control_Stage__c</fullName>
        <description>Track the fire jumper program</description>
        <label>Advanced Threat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stage1</fullName>
                </value>
                <value>
                    <fullName>Stage2</fullName>
                </value>
                <value>
                    <fullName>Stage3</fullName>
                </value>
                <value>
                    <fullName>Stage4</fullName>
                </value>
                <value>
                    <fullName>Stage5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ManagerFirstName__c</fullName>
        <description>First Name of the Contact's Manager</description>
        <label>TO BE DELETED Manager First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerLastName__c</fullName>
        <description>Last Name of the Contact's Manager</description>
        <label>TO BE DELETED Manager Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerMiddleName__c</fullName>
        <description>Middle Name of the Contact's Manager</description>
        <label>TO BE DELETED Manager Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Activity__c</fullName>
        <description>Used to indicate recent marketing activity.</description>
        <formula>IF(AND(NEW__c, NOW()-CreatedDate&lt;=90), 
IMAGE("servlet/servlet.FileDownload?file=01530000000LaovAAC", "New Contact"&amp;":"&amp; Create_Date_Text__c), 
IF(AND(NOT(NEW__c),  LEN( Marketing_Date__c)&gt;0 , NOW()-RECENTLY_ACTIVITY_TS__c&lt;180), 
IMAGE("servlet/servlet.FileDownload?file=01530000000LaoqAAC" , "Recent Marketing Activity"&amp;":"&amp;Marketing_Date__c), 
IF(AND(NEW__c, NOW()-RECENTLY_ACTIVITY_TS__c&lt;180), 
IMAGE("servlet/servlet.FileDownload?file=01530000000LaoqAAC" , "Recent Marketing Activity"&amp;":"&amp;Marketing_Date__c), 
IMAGE("/s.gif", ""))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Date__c</fullName>
        <description>This field is to convert Recent Acitivity Date in Text format for MSL to display for user when hoover over to Recent Marketing indicator for contact</description>
        <formula>TEXT(DAY(DATEVALUE(RECENTLY_ACTIVITY_TS__c)))&amp;"-"&amp;
CASE(
(MONTH(DATEVALUE(RECENTLY_ACTIVITY_TS__c))), 
1, "Jan",
2, "Feb",
3, "Mar",
4, "Apr",
5, "May",
6, "Jun",
7, "Jul",
8, "Aug",
9, "Sep",
10, "Oct",
11, "Nov",
12, "Dec", "-")&amp;"-"&amp;
TEXT(YEAR(DATEVALUE(RECENTLY_ACTIVITY_TS__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Date Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Copy__c</fullName>
        <description>Copy of MobilePhone value without special characters</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(MobilePhone, ' ', '' ), '+', '' ), '(', '' ), ')', '' ), '-', '' ), '*', '' ), ':', '' ), '/', '' ), '#', '' ), '?', '' ), 'ext', '' ),'.', '' ),';', '' ),"'", '' ), ',', '' ), '"', '' ), '!', '' ), 'x', '' )</formula>
        <label>TO BE DELETED Mobile Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates that the Contact is new from Marketing</description>
        <label>New Marketing Contact Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network_Threat_Stage__c</fullName>
        <label>Network Security</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stage1</fullName>
                </value>
                <value>
                    <fullName>Stage2</fullName>
                </value>
                <value>
                    <fullName>Stage3</fullName>
                </value>
                <value>
                    <fullName>Stage4</fullName>
                </value>
                <value>
                    <fullName>Stage5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Newsletter_Preference__c</fullName>
        <description>Partner 360 field used by integration</description>
        <label>Newsletter Preference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nurture_Date__c</fullName>
        <description>Date when Nurture Program was changed.</description>
        <label>Nurture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nurture_Program_Name__c</fullName>
        <description>Program Name for which contacts need Nurturing in Marketing</description>
        <label>Nurture Program Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OldAccountIdBeforeDeletion__c</fullName>
        <description>This field stores the old account Id, before transferring it to Contact Delete Dummy Account</description>
        <label>OldAccountIdBeforeDeletion</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldAccountNameBeforeDeletion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the old account name, before transferring it to Contact Delete Dummy Account.</description>
        <label>OldAccountNameBeforeDeletion</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (OldAccountNameBeforeDeletion)</relationshipLabel>
        <relationshipName>ContactAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OldContactOwnerBeforeDeletion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the contact owner information,before transferring it to Contact Delete Dummy Account.</description>
        <label>OldContactOwnerBeforeDeletion</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ContactOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OldContactOwnerIdBeforeDeletion__c</fullName>
        <description>This field stores the contact owner Id information, before transferring it to Contact Delete Dummy Account</description>
        <label>OldContactOwnerIdBeforeDeletion</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optional_Field_1__c</fullName>
        <description>User-defined field to allow Security team to tag records for reporting or projects</description>
        <inlineHelpText>Can be used for Tagging and Reporting Contacts.</inlineHelpText>
        <label>Optional Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optional_Field_2__c</fullName>
        <description>User-defined field to allow Security team to tag records for reporting or projects</description>
        <inlineHelpText>Can be used for Tagging and Reporting Contacts.</inlineHelpText>
        <label>Optional Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone_Copy__c</fullName>
        <description>Copy of OtherPhone without special characters</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(OtherPhone, ' ', '' ), '+', '' ), '(', '' ), ')', '' ), '-', '' ), '*', '' ), ':', '' ), '/', '' ), '#', '' ), '?', '' ), 'ext', '' ),'.', '' ),';', '' ),"'", '' ), ',', '' ), '"', '' ), '!', '' ), 'x', '' )</formula>
        <label>TO BE DELETED Other Phone Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_Role__c</fullName>
        <description>Release: Release: P360 March 2013 
Purpose: To hold Type of access to be granted to the user</description>
        <label>Partner User Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPreferredCommunication__c</fullName>
        <description>Preferred Communication medium for the contact</description>
        <label>Preferred Communication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Admin_Role_Update_Date__c</fullName>
        <description>Date Time at which the partner admin role is updated</description>
        <label>Partner Admin Role Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Admin_Roles__c</fullName>
        <description>Displays all the admin roles for the various channels tools assigned to the partner contact</description>
        <label>Partner Admin Roles</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Name_Local__c</fullName>
        <description>Field used to insert the partner contact name in local language by internal user</description>
        <label>Partner Contact Name (Local)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Program_Enrollment_Updated_Date__c</fullName>
        <description>Release: P360 March 2013 
Purpose: This will be flagged with today() whenever contact needs to be processed for P360 User Onboarding Job.
This is part of P360 Partner On boarding Daily Jobs implementation.</description>
        <label>Partner Program Enrollment Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Role__c</fullName>
        <description>Partner Role</description>
        <label>Partner Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Security Sales</fullName>
                </value>
                <value>
                    <fullName>Security Pre-Sales Engineer</fullName>
                </value>
                <value>
                    <fullName>Security Post-Sales Engineer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Site_Name__c</fullName>
        <description>Indicates Partner Site Name of the partner company the contact is associated to, sourced from Contact SOR</description>
        <label>Partner Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field not used.
[rdavis@salesforce.com, 08/09/2006]: Created.</description>
        <label>TO BE DELETED Partner User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001VF3BEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Personality__c</fullName>
        <description>Used for AP
Sales perspective of the contact</description>
        <label>Personality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enemy</fullName>
                </value>
                <value>
                    <fullName>Non-Supportive</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Supporter</fullName>
                </value>
                <value>
                    <fullName>Mentor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Copy__c</fullName>
        <description>Copy of Phone without special characters</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, ' ', '' ), '+', '' ), '(', '' ), ')', '' ), '-', '' ), '*', '' ), ':', '' ), '/', '' ), '#', '' ), '?', '' ), 'ext', '' ),'.', '' ),';', '' ),"'", '' ), ',', '' ), '"', '' ), '!', '' ), 'x', '' )</formula>
        <label>TO BE DELETED Phone Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Ext__c</fullName>
        <description>Extention Number of the contact</description>
        <label>Phone Ext.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Next_Step_Due_Date__c</fullName>
        <description>Shows the date of the next step that is due</description>
        <inlineHelpText>Shows the date of the next step that is due</inlineHelpText>
        <label>Playbooks Next Step Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Playbooks_Play_Name__c</fullName>
        <label>Playbooks Play Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Play_Status__c</fullName>
        <label>Playbooks Play Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-Flight</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Paused</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Unenrolled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Number__c</fullName>
        <label>Playbooks Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pref_Language__c</fullName>
        <description>Partner User Preferred Language Used for L&amp;P</description>
        <formula>Case(PreferredLanguage__c, 
"Simplified Chinese", "zh_CN", 
"Chinese (Simplified)", "zh_CN", 
"Chinese (Traditional)","zh_TW", 
"Danish","da", 
"Dutch","nl_NL", 
"Finnish","fi", 
"French","fr", 
"German","de", 
"Hebrew","iw", 
"Hungarian","hu", 
"Indonesian","in",
"Italian","it", 
"Japanese","ja", 
"Korean","ko",
"Norwegian","no",  
"Polish","pl",
"Portuguese (Brazil)","pt_BR", 
"Romanian","ro",
"Russian","ru", 
"Spanish","es", 
"Swedish","sv", 
"Thai","th",    
"Turkish","tr", 
"Ukrainian","uk", 
"Vietnamese","vi", 
"en_US")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner User Preferred Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredCiscoContact__c</fullName>
        <label>TO BE DELETED Preferred Cisco Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredLanguage__c</fullName>
        <description>Language Preferred  by the contact</description>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Arabic (Saudi Arabia)</fullName>
                </value>
                <value>
                    <fullName>Bahasa</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Catalan</fullName>
                </value>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Faroese</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Icelandic</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Irish</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
                <value>
                    <fullName>Macedonian</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Name__c</fullName>
        <description>Prefered name indicated by the partner contact</description>
        <label>Preferred Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Event_Code__c</fullName>
        <label>Program Event Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Event_Description__c</fullName>
        <label>Program Event Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Event_Name__c</fullName>
        <label>Program Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programs_Preferences__c</fullName>
        <description>One of the 8 partner contact preferences to indicate preference for marketing communication</description>
        <label>Programs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RECENTLY_ACTIVITY_TS__c</fullName>
        <description>This field is used for MSL Project to document recent marketing activity time stamp</description>
        <label>RECENTLY ACTIVITY TS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Relationship_Goal__c</fullName>
        <description>Used for AP</description>
        <label>TO BE DELETED Relationship Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Status__c</fullName>
        <label>TO BE DELETED Relationship Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Developing Relationship</fullName>
                </value>
                <value>
                    <fullName>Solid Supporter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Mobile_Number__c</fullName>
        <description>Field used for internal user to insert additional mobile number. This will be written back to Contact SOR</description>
        <label>Additional Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SFDC_Phone_Number__c</fullName>
        <description>Field used for internal user to insert additional phone number. This will be written back to Contact SOR</description>
        <label>Additional Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SFDC_Primary_Email__c</fullName>
        <description>Field used for internal user to insert additional email. This will be written back to Contact SOR</description>
        <label>Additional Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SFDC_Secondary_Email__c</fullName>
        <description>Field used for internal user to insert additional second email. This will be written back to Contact SOR</description>
        <label>Additional Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SSuggestedActivityFrequency__c</fullName>
        <label>TO BE DEL Suggested Activity Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Suppression__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MCP Phase1: To allow Sales Rep to suppress a contact / lead from receiving Marketing communications</description>
        <inlineHelpText>Suppress a contact / lead from receiving Marketing communications</inlineHelpText>
        <label>Eloqua Sales Suppression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sansan_Company_URL__c</fullName>
        <description>Sansan Company URL</description>
        <label>Sansan Company URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sansan_Memo__c</fullName>
        <description>Sansan Memo</description>
        <label>Sansan Memo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sansan_Registered_Time__c</fullName>
        <description>Sansan Registered Time</description>
        <label>Sansan Registered Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Secure_Access_Mobility_Stage__c</fullName>
        <label>Visibility &amp; Enforcement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stage1</fullName>
                </value>
                <value>
                    <fullName>Stage2</fullName>
                </value>
                <value>
                    <fullName>Stage3</fullName>
                </value>
                <value>
                    <fullName>Stage4</fullName>
                </value>
                <value>
                    <fullName>Stage5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <description>Field used for P360 1B partner contact cleanup</description>
        <label>Sequence Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shanghai_Expo_Invitee__c</fullName>
        <description>QW-5112, Used to track contact invitee status for Shanghai World Expo</description>
        <label>TO BE DELETED Shanghai Expo Invitee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Account_ID__c</fullName>
        <label>Source Account ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Contact_ID__c</fullName>
        <label>Source Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuggestedNumberofActivities__c</fullName>
        <label>TO BE DEL Suggested Number of Activities</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SuggestedType__c</fullName>
        <label>TO BE DELETED Suggested Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Team_Comments__c</fullName>
        <description>Used by Support team.</description>
        <label>Support Team Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSN_Contact_Entitlement__c</fullName>
        <description>This field will contain TSN Partner Entitlement for Contacts. It is determined based on TSN Account Entitlement, Geographic Location and Partner Certification fields</description>
        <formula>IF
( 
(CONTAINS(Account.TSN_Account_Entitlement__c, 'Plus FY17-18 Bridge') || 
 CONTAINS(Account.TSN_Account_Entitlement__c, 'Disti FY18 Exceptions') ||
 CONTAINS(Account.TSN_Account_Entitlement__c, 'Partner Plus FY18 Big Bets') ||
 CONTAINS(Account.TSN_Account_Entitlement__c, 'Elite'))
&amp;&amp;
! INCLUDES( Account.Account_Flags__c ,'Suspended – TSN Entitlement'), 'Yes', 'No'
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TSN Contact Entitlement</label>
        <type>Text</type>
    </fields>
</CustomObject>